# mlib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: algebra.cpp.FCD91308FC64A763.idx  algebra.hpp.2B35F089B32E7516.idx  arithmetic.cpp.AB372CB52024FF4F.idx  arithmetic.hpp.2C0FFDFC98375797.idx  main.cpp.291725D0E6320028.idx  test_util.cpp.F2CF6F3116B3E6EF.idx  test_util.hpp.A5EBCECA42E88C79.idx
include/mlib/: algebra.hpp  arithmetic.hpp
include/testing/: test_util.hpp
lib/: CMakeLists.txt  algebra.cpp  arithmetic.cpp  arithmetic.hpp
src/: algebra.cpp  arithmetic.cpp  test_util.cpp
